flex-wrap: nowrap;   bottom:0;   position:fixed;     display:inline; grid-template-rows: auto auto auto;     background-color: black;   color:white;   padding:5px;   position:fixed;   width:50vw;   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #0ff,     0 0 80px #0ff, 0 0 90px #0ff, 0 0 100px #0ff, 0 0 150px #0ff;

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -188,9 +188,10 @@ hr {
 
 #footer {
 
+  flex-wrap: nowrap;
   bottom:0;
   position:fixed;
-    display: grid;
+    display:inline;
 grid-template-rows: auto auto auto;
     background-color: black;
   color:white;
